--- a/paper.tex
+++ b/paper.tex
@@ -252,11 +252,11 @@ Replacing $g$ with $h^{-1} g$, we arrive at the expression
 \end{align*}
 Since the last inner sum is $\GaussSum{\pi}{\fieldCharacter}_{-A}$, we have that the sum can be reduced to $A \in \GL_n\left(\finiteField\right)$. Replacing $h$ with $A^{-1} h$ and $g$ with $-A^{-1} g$, we get the sum
 \begin{align*}
-	\dblGaussSum{\pi}{\chi} &= q^{-n^2} \centralCharacter{\pi}\left(-1\right) \sum_{A \in \GL_n\left(\finiteField\right)} \chi\left(\det A\right) \fieldCharacter\left(\trace A\right) \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter},
+	\dblGaussSumScalar{\pi}{\chi} &= q^{-n^2} \centralCharacter{\pi}\left(-1\right) \sum_{A \in \GL_n\left(\finiteField\right)} \chi\left(\det A\right) \fieldCharacter\left(\trace A\right) \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter},
 \end{align*}
 which equals
 \begin{align*}
-	\dblGaussSum{\pi}{\chi} &= \left(-1\right)^{n-1} q^{-n^2} \centralCharacter{\pi}\left(-1\right) \GaussSumScalar{\chi}{\fieldCharacter}^n \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter}.
+	\dblGaussSumScalar{\pi}{\chi} &= \left(-1\right)^{n-1} q^{-n^2} \centralCharacter{\pi}\left(-1\right) \GaussSumScalar{\chi}{\fieldCharacter}^n \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter}.
 \end{align*}
 
 \bibliographystyle{abbrv}
