--- a/paper.tex
+++ b/paper.tex
@@ -240,7 +240,7 @@ Then $\dblGaussSum{\pi}{\chi}$ defines an element of $\Hom_{\GL_n\left(\finiteFi
 The goal of this section is to express $\dblGaussSumScalar{\pi}{\chi}$ in terms of Kondo's Gauss sum.
 
 Assume first that $1$ does not appear in the cuspidal support of $\pi$. Let us write
-$$\dblGaussSum{\pi}{\chi} = \sum_{\substack{g \in \GL_n\left(\finiteField\right) \sum_{A \in \squareMatrix_n\left(\finiteField\right)}\\
+$$\dblGaussSum{\pi}{\chi} = \sum_{\substack{g \in \GL_n\left(\finiteField\right) \\
 \det\left(g - \IdentityMatrix{n}\right) \ne 0}} \chi\left(\det\left(g - \IdentityMatrix{n}\right)\right) \pi\left(g\right).$$
 We rewrite this using a Fourier transform type expression
 $$\dblGaussSum{\pi}{\chi} = q^{-n^2} \sum_{g, h \in \GL_n\left(\finiteField\right)} \sum_{A \in \squareMatrix_n\left(\finiteField\right)} \chi^{-1}\left(\det h\right) \pi\left(g\right) \fieldCharacter\left(\trace\left(A \left(\IdentityMatrix{n} - h \left(g - \IdentityMatrix{n}\right)\right)\right)\right).$$
