--- a/paper.tex
+++ b/paper.tex
@@ -200,15 +200,25 @@ $$B_r = \left\{ \begin{pmatrix}
 \end{pmatrix} \mid t_1,\dots,t_r \in \multiplicativegroup{\finiteField} \right\}.$$
 
 \section{Degenerate Gauss sums}
-Let $\pi$ be an irreducible representation of $\GL_n\left(\finiteField\right)$. The purpose of this section is to study the following operator, which we refer to as a degenerate Gauss sum
-$$\GaussSum{\pi}{\fieldCharacter}_r = \sum_{g \in \GL_n\left(\finiteField\right)} \pi\left(g\right) \fieldCharacter\left(\trace\left(g \begin{pmatrix}
+Let $\pi$ be an irreducible representation of $\GL_n\left(\finiteField\right)$. For a matrix $A \in \squareMatrix_n\left(\finiteField\right)$, denote
+$$\GaussSum{\pi}{\fieldCharacter}_A \coloneqq q^{-\frac{n^2}{2}} \sum_{g \in \GL_n\left(\finiteField\right)} \pi\left(g\right) \fieldCharacter\left(\trace\left(A g\right)\right).$$
+For any such $A$, there exist $h_1, h_2 \in \GL_n\left(\finiteField\right)$ and $0 \le r \le n$, such that $A = h_1 \begin{pmatrix}
+	0_r\\
+	& \IdentityMatrix{n-r}
+\end{pmatrix} h_2$. Changing variables, we see that $$\GaussSum{\pi}{\fieldCharacter}_A = \pi \left(h_2^{-1}\right) \circ \GaussSum{\pi}{\fieldCharacter}_r \circ \pi\left(h_1^{-1}\right),$$
+where
+$$\GaussSum{\pi}{\fieldCharacter}_r = q^{-\frac{n^2}{2}} \sum_{g \in \GL_n\left(\finiteField\right)} \pi\left(g\right) \fieldCharacter\left(\trace\left(g \begin{pmatrix}
 	0_{r}\\
 	& \IdentityMatrix{n-r}
 \end{pmatrix}\right)\right).$$
 Notice that $\GaussSum{\pi}{\fieldCharacter}_0$ lies in $\Hom_{\GL_n\left(\finiteField\right)}\left(\pi, \pi\right)$ and therefore, $$\GaussSum{\pi}{\fieldCharacter} \coloneqq \GaussSum{\pi}{\fieldCharacter}_0 = \GaussSumScalar{\pi}{\fieldCharacter} \cdot \idmap_\pi,$$
-where $\GaussSumScalar{\pi}{\fieldCharacter} \in \cComplex$. The computation of this scalar is known due to Kondo.
+where $\GaussSumScalar{\pi}{\fieldCharacter} \in \cComplex$. The computation of this scalar is known due to Kondo. Let us also denote for a character $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$, the \emph{twisted Gauss sum}
+$$\GaussSum{\pi \times \chi}{\fieldCharacter} = q^{-\frac{n^2}{2}} \sum_{g \in \GL_n\left(\finiteField\right)} \pi\left(g\right) \chi\left(\det g\right) \fieldCharacter\left(\trace g\right).$$
+This element also lies in $\Hom_{\GL_n\left(\finiteField\right)}\left(\pi, \pi\right)$ and we denote
+$$\GaussSum{\pi \times \chi}{\fieldCharacter} = \GaussSumScalar{\pi \times \chi}{\fieldCharacter} \cdot \idmap_\pi,$$
+where $\GaussSumScalar{\pi \times \chi}{\fieldCharacter} \in \cComplex$.
 
-We begin with the following simple observation. We have that for any $b \in B_r$ and any $X \in \Mat{r}{(n-r)}\left(\finiteField\right)$,
+Let us show that if $A$ is singular and $\pi$ does not contain $1$ in its cuspidal support then $\GaussSum{\pi}{\fieldCharacter}_A = 0$. We begin with the following simple observation. We have that for any $b \in B_r$ and any $X \in \Mat{r}{(n-r)}\left(\finiteField\right)$,
 $$ \pi\begin{pmatrix}
 b & X\\
 & \IdentityMatrix{n-r}
@@ -219,8 +229,7 @@ Therefore, we have that $\GaussSum{\pi}{\fieldCharacter}_r$ can be regarded as a
 \end{pmatrix} v = v, \forall b \in B_r, X \in \Mat{r}{(n-r)}\left(\finiteField\right) \right\},$$
 which is a representation of the group $B_r \times \GL_{n-r}\left(\finiteField\right)$. This space is non-zero if and only if $\pi$ is subrepresentation of a parabolically induced representation of the form $1^{\circ r} \circ \tau = 1 \circ \dots \circ 1 \circ \tau$, where $\tau$ is an irreducible representation of $\GL_{n-r}\left(\finiteField\right)$. 
 
-It follows from this observation that if $\pi$ is an irreducible representation of $\GL_n\left(\finiteField\right)$ such that $1$ is not in the cuspidal support of $\pi$, then for any matrix $A$ with rank $< n$, 
-$$\GaussSum{\pi}{\fieldCharacter}_A \coloneqq \sum_{g \in \GL_n\left(\finiteField\right)} \pi\left(g\right) \fieldCharacter\left(\trace\left(A g\right)\right) = 0.$$
+It follows from this observation that if $\pi$ is an irreducible representation of $\GL_n\left(\finiteField\right)$ such that $1$ is not in the cuspidal support of $\pi$, then for any matrix $A$ with rank $< n$, we have $\GaussSum{\pi}{\fieldCharacter}_A = 0$.
 
 \section{Doubling method Gauss sums}
 
@@ -228,36 +237,37 @@ $$\GaussSum{\pi}{\fieldCharacter}_A \coloneqq \sum_{g \in \GL_n\left(\finiteFiel
 
 Let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be a character.
 
-Consider the following assignment $\GL_n\left(\finiteField\right) \to \multiplicativegroup{\cComplex}$
+Consider the following assignment $\GL_n\left(\finiteField\right) \to \cComplex$
 $$\Phi_{\chi}\left(g\right) = \begin{dcases}
 	\chi\left(\det\left(g-\IdentityMatrix{n}\right)\right) & \text{if }\det\left(g-\IdentityMatrix{n}\right) \ne 0,\\
 	0 & \text{otherwise.}
 \end{dcases}$$
 It is clear that $\Phi_{\chi}$ is a class function of $\GL_n\left(\finiteField\right)$. Given an irreducible representation $\pi$ of $\GL_n\left(\finiteField\right)$, we consider the following \emph{doubling method Gauss sum}:
-$$\dblGaussSum{\pi}{\chi} = \sum_{g \in \GL_n\left(\finiteField\right)} \Phi_{\chi}\left(g\right) \pi\left(g\right).$$
+$$\dblGaussSum{\pi}{\chi} = q^{-\frac{n^2}{2}} \sum_{g \in \GL_n\left(\finiteField\right)} \Phi_{\chi}\left(g\right) \pi\left(g\right).$$
 Then $\dblGaussSum{\pi}{\chi}$ defines an element of $\Hom_{\GL_n\left(\finiteField\right)}\left(\pi, \pi\right)$. Therefore, by Schur's lemma there exists a complex number $\dblGaussSumScalar{\pi}{\chi} \in \cComplex$ such that $$\dblGaussSum{\pi}{\chi} = \dblGaussSumScalar{\pi}{\chi} \cdot \idmap_\pi.$$ 
 
 The goal of this section is to express $\dblGaussSumScalar{\pi}{\chi}$ in terms of Kondo's Gauss sum.
 
 Assume first that $1$ does not appear in the cuspidal support of $\pi$. Let us write
-$$\dblGaussSum{\pi}{\chi} = \sum_{\substack{g \in \GL_n\left(\finiteField\right) \\
+$$\dblGaussSum{\pi}{\chi} = q^{-\frac{n^2}{2}} \sum_{\substack{g \in \GL_n\left(\finiteField\right) \\
 \det\left(g - \IdentityMatrix{n}\right) \ne 0}} \chi\left(\det\left(g - \IdentityMatrix{n}\right)\right) \pi\left(g\right).$$
 We rewrite this using a Fourier transform type expression
-$$\dblGaussSum{\pi}{\chi} = q^{-n^2} \sum_{g, h \in \GL_n\left(\finiteField\right)} \sum_{A \in \squareMatrix_n\left(\finiteField\right)} \chi^{-1}\left(\det h\right) \pi\left(g\right) \fieldCharacter\left(\trace\left(A \left(\IdentityMatrix{n} - h \left(g - \IdentityMatrix{n}\right)\right)\right)\right).$$
+$$\dblGaussSum{\pi}{\chi} = q^{-\frac{3n^2}{2}} \sum_{g, h \in \GL_n\left(\finiteField\right)} \sum_{A \in \squareMatrix_n\left(\finiteField\right)} \chi^{-1}\left(\det h\right) \pi\left(g\right) \fieldCharacter\left(\trace\left(A \left(\IdentityMatrix{n} - h \left(g - \IdentityMatrix{n}\right)\right)\right)\right).$$
 
 Replacing $g$ with $h^{-1} g$, we arrive at the expression
 \begin{align*}
-	\dblGaussSum{\pi}{\chi} &= q^{-n^2} \sum_{A \in \squareMatrix_n\left(\finiteField\right)} \fieldCharacter\left(\trace A\right) \sum_{h \in \GL_n\left(\finiteField\right)} \chi^{-1}\left(\det h\right) \pi\left(h^{-1}\right) \fieldCharacter\left(\trace\left(Ah\right)\right)\\
+	\dblGaussSum{\pi}{\chi} &= q^{-\frac{3n^2}{2}} \sum_{A \in \squareMatrix_n\left(\finiteField\right)} \fieldCharacter\left(\trace A\right) \sum_{h \in \GL_n\left(\finiteField\right)} \chi^{-1}\left(\det h\right) \pi\left(h^{-1}\right) \fieldCharacter\left(\trace\left(Ah\right)\right)\\
 	& \circ \sum_{g \in \GL_n\left(\finiteField\right)} \pi\left(g\right) \fieldCharacter\left(-\trace Ag\right).
 \end{align*}
-Since the last inner sum is $\GaussSum{\pi}{\fieldCharacter}_{-A}$, we have that the sum can be reduced to $A \in \GL_n\left(\finiteField\right)$. Replacing $h$ with $A^{-1} h$ and $g$ with $-A^{-1} g$, we get the sum
+Since the last inner sum is $q^{\frac{n^2}{2}} \GaussSum{\pi}{\fieldCharacter}_{-A}$, we have that the sum can be reduced to $A \in \GL_n\left(\finiteField\right)$. Replacing $h$ with $A^{-1} h$ and $g$ with $-A^{-1} g$, we get the sum
 \begin{align*}
-	\dblGaussSumScalar{\pi}{\chi} &= q^{-n^2} \centralCharacter{\pi}\left(-1\right) \sum_{A \in \GL_n\left(\finiteField\right)} \chi\left(\det A\right) \fieldCharacter\left(\trace A\right) \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter},
+	\dblGaussSumScalar{\pi}{\chi} &= q^{-\frac{n^2}{2}} \centralCharacter{\pi}\left(-1\right) \sum_{A \in \GL_n\left(\finiteField\right)} \chi\left(\det A\right) \fieldCharacter\left(\trace A\right) \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter},
 \end{align*}
 which equals
 \begin{align*}
-	\dblGaussSumScalar{\pi}{\chi} &= \left(-1\right)^{n-1} q^{-n^2} \centralCharacter{\pi}\left(-1\right) \GaussSumScalar{\chi}{\fieldCharacter}^n \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter}.
+	\dblGaussSumScalar{\pi}{\chi} &=  \centralCharacter{\pi}\left(-1\right) \GaussSumScalar{\chi}{\fieldCharacter}^n \GaussSumScalar{\Contragradient{\pi} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\pi}{\fieldCharacter}.
 \end{align*}
+
 
 \bibliographystyle{abbrv}
 \bibliography{references}
