--- a/paper.tex
+++ b/paper.tex
@@ -177,7 +177,7 @@
 	pdfsubject={Number theory, Representation theory},
 	pdfkeywords={Kloosterman sums, Gauss sums}}
 
-\title{Degenerate Gauss sums for $\GL_n\left(\finiteField_q\right)$}
+\title{On exponential sums arising from the doubling method}
 
 \author{Elad Zelingher}
 \address{Department of Mathematics, University of Michigan, 1844 East Hall, 530 Church Street, Ann Arbor, MI 48109-1043 USA}
@@ -272,7 +272,7 @@ which equals
 \begin{align*}
 	\dblGaussSumScalar{\tau}{\chi} &=  \centralCharacter{\tau}\left(-1\right) \GaussSumScalar{\chi}{\fieldCharacter}^n \GaussSumScalar{\Contragradient{\tau} \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\tau}{\fieldCharacter}.
 \end{align*}
-This is probably also true if $1$ is in the cuspidal support of $\tau$ (return to this later: probably can follow from a multiplicativity arguments). In the meantime, we will check this for $\tau = 1$ the trivial representation of $\GL_1\left(\finiteField\right)$, in which case we have
+This is probably also true if $1$ is in the cuspidal support of $\tau$  and $\chi \ne 1$ (return to this later: probably can follow from a multiplicativity arguments). In the meantime, we will check this for $\tau = 1$ the trivial representation of $\GL_1\left(\finiteField\right)$, in which case we have
 $$\dblGaussSum{1}{\chi} = q^{-\frac{1}{2}} \sum_{\substack{x \in \multiplicativegroup{\finiteField} \\
 		x \ne 1}} \chi\left(x - 1\right) = q^{-\frac{1}{2}}\left(-1 + \sum_{x \in \multiplicativegroup{\finiteField}} \chi\left(x\right) \right) = \begin{dcases}
 		-q^{-\frac{1}{2}} & \chi \ne 1\\
